--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   shared_preferences: 0.5.12+4
   url_launcher: 5.7.10
   velocity_x: 1.0.1
+  image_picker: 0.6.7+17
 
 dev_dependencies:
   flutter_test:
