--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,23 +11,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: 2.3.3
+  cached_network_image: 2.5.0
   connectivity: 2.0.2
-  cupertino_icons: 1.0.1+1
+  cupertino_icons: 1.0.2
   dio: 3.0.10
   flutter_hooks: 0.15.0
-  flutter_platform_widgets: 0.71.0
+  flutter_platform_widgets: 0.72.0
   flutter_svg: 0.19.2+1
-  provider: 4.3.2+2
+  provider: 4.3.2+3
   shared_preferences: 0.5.12+4
   url_launcher: 5.7.10
-  velocity_x: 1.0.1
+  velocity_x: 1.3.1
   image_picker: 0.6.7+17
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.10.6
+  build_runner: 1.10.11
   lint: 1.5.1
 
 flutter:
