--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: gmt_planter
 description: A new Flutter project.
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: 'none'
 
 version: 1.0.0+1
 
@@ -22,12 +22,12 @@ dependencies:
   shared_preferences: 0.5.12+4
   url_launcher: 5.7.10
   velocity_x: 1.3.1
-  image_picker: 0.6.7+17
+  image_picker: 0.6.7+20
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.10.11
+  build_runner: 1.10.12
   lint: 1.5.1
 
 flutter:
