--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   url_launcher: 5.7.10
   velocity_x: 1.3.1
   image_picker: 0.6.7+20
+  camera: 0.7.0+1
+  permission_handler: 5.0.1+1
 
 dev_dependencies:
   flutter_test:
