--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: 'none'
 
-version: 1.0.0+1
+version: 0.0.2+2
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -12,19 +12,20 @@ dependencies:
   flutter:
     sdk: flutter
   cached_network_image: 2.5.0
+  camera: 0.7.0+1
   connectivity: 2.0.2
   cupertino_icons: 1.0.2
   dio: 3.0.10
   flutter_hooks: 0.15.0
   flutter_platform_widgets: 0.72.0
   flutter_svg: 0.19.2+1
+  image_picker: 0.6.7+20
+  permission_handler: 5.0.1+1
   provider: 4.3.2+3
   shared_preferences: 0.5.12+4
   url_launcher: 5.7.10
   velocity_x: 1.3.1
-  image_picker: 0.6.7+20
-  camera: 0.7.0+1
-  permission_handler: 5.0.1+1
+  flutter_exif_rotation: 0.3.2
 
 dev_dependencies:
   flutter_test:
