--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,9 +1,9 @@
 name: gmt_planter
 description: A new Flutter project.
 
-publish_to: 'none'
+publish_to: "none"
 
-version: 0.0.2+2
+version: 0.0.3+3
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -11,33 +11,41 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  cached_network_image: 2.5.0
-  camera: 0.7.0+1
-  connectivity: 2.0.2
+  flutter_localizations:
+    sdk: flutter
+  velocity_x:
+    git:
+      url: https://github.com/iampawan/VelocityX
+      ref: dev#null-safety
+  cached_network_image: 3.0.0-nullsafety
+  camera: 0.8.0
+  connectivity: 3.0.2
   cupertino_icons: 1.0.2
-  dio: 3.0.10
-  flutter_hooks: 0.15.0
-  flutter_platform_widgets: 0.72.0
-  flutter_svg: 0.19.2+1
-  image_picker: 0.6.7+20
-  permission_handler: 5.0.1+1
-  provider: 4.3.2+3
-  shared_preferences: 0.5.12+4
-  url_launcher: 5.7.10
-  velocity_x: 1.3.1
-  flutter_exif_rotation: 0.3.2
+  dio: 4.0.0-beta6
+  flutter_hooks: 0.16.0
+  flutter_platform_widgets: 1.0.1-nullsafety.0
+  flutter_svg: 0.21.0-nullsafety.0
+  image_picker: 0.7.2
+  path_provider: 2.0.1
+  permission_handler: 6.0.1
+  provider: 5.0.0
+  shared_preferences: 2.0.1
+  url_launcher: 6.0.2
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: 1.10.12
+  flutter_launcher_icons: 0.9.0
   lint: 1.5.1
+flutter_icons:
+  ios: true
+  image_path: "assets/images/logo.png"
 
 flutter:
-
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/language/
   # fonts:
   #   - family: Schyler
   #     fonts:
