--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -3,7 +3,7 @@ description: A new Flutter project.
 
 publish_to: "none"
 
-version: 0.0.7+7
+version: 0.0.8+8
 
 environment:
   sdk: ">=2.7.0 <3.0.0"
@@ -22,10 +22,13 @@ dependencies:
   connectivity: 3.0.2
   cupertino_icons: 1.0.2
   dio: 4.0.0-beta6
+  firebase_core: 1.3.0
+  firebase_messaging: 10.0.2
   flutter_hooks: 0.16.0
   flutter_platform_widgets: 1.0.1-nullsafety.0
   flutter_svg: 0.21.0-nullsafety.0
   image_picker: 0.7.2
+  package_info: 2.0.2
   path_provider: 2.0.1
   permission_handler: 6.0.1
   provider: 5.0.0
@@ -35,6 +38,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  change_app_package_name: 1.0.0
   flutter_launcher_icons: 0.9.0
   lint: 1.5.1
 flutter_icons:
