--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,13 +14,13 @@ dependencies:
   connectivity: 3.0.6
   cupertino_icons: 1.0.4
   dio: 4.0.1
+  exif: 3.0.1
   firebase_core: 1.10.0
   firebase_messaging: 11.1.0
   flutter:
     sdk: flutter
   flutter_hooks: 0.18.1
   flutter_local_notifications: 9.1.0
-  exif: 3.0.1
   flutter_localizations:
     sdk: flutter
   flutter_native_image: 0.0.6+1
@@ -28,6 +28,7 @@ dependencies:
   flutter_svg: 0.23.0+1
   image: 3.0.8
   image_picker: 0.8.4+4
+  intl: ^0.17.0
   package_info: 2.0.2
   path_provider: 2.0.6
   permission_handler: 8.2.6
@@ -37,7 +38,7 @@ dependencies:
   velocity_x: 3.3.0
 
 dev_dependencies:
-  change_app_package_name: 1.0.0
+  rename: ^2.0.1
   flutter_launcher_icons: 0.9.2
   flutter_test:
     sdk: flutter
